about page and images

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -24,34 +24,33 @@ import { Icon } from "astro-icon/components";
 
         <section class="text-lg mx-auto">
           <p class="mt-4">
-            <strong>Wonder <span class="text-gray-500">Dots</span></strong> steht für <strong>Neugier</strong>, <strong>Kreativität</strong> und Spass am <strong>Entdecken</strong>.
+            <strong>Wonder Dots</strong> steht für <strong>Neugier</strong>, <strong>Kreativität</strong> und Spass am <strong>Entdecken</strong>.
           </p>
 
           <p class="mt-4">
-            Unsere <strong>interaktiven Kurse</strong> in <strong>kleinen Gruppen</strong> wecken spielerisch
-            das Interesse an Mathematik, Informatik, Naturwissenschaften und Technik (<strong>MINT</strong>) und fördern gezielt
-            das <strong>informatische Denken</strong> (Computational Thinking) – nicht nur am Bildschirm!
+            Unsere <strong>interaktiven Kurse</strong> in <strong>kleinen Gruppen</strong> fördern gezielt
+            das <strong>informatische Denken</strong> (Computational Thinking) und wecken spielerisch
+            das Interesse an Mathematik, Informatik, Naturwissenschaften und Technik (<strong>MINT</strong>-Fächer).
           </p>
           <p class="mt-4">
+            Dabei sind wir <strong>nicht nur am Bildschirm</strong> aktiv, sondern wir verbinden <strong>kreative Arbeit</strong> z.B. mit Stift und Papier mit informatischen Inhalten.
+          </p>
+          <p class="mt-4">
+            <a href="/about">Mehr zu unserem Konzept</a>
+          </p>
+          <p class="mt-4 font-bold">
             Hast du Lust, mit uns die digitale Welt zu erkunden?
           </p>
-          <p class="mt-4">
-            Entdecke unsere aktuellen Aktivitäten und melde dich gleich an!
-          </p>
 
-          <p class="mt-6 flex flex-col sm:flex-row gap-3">
+          <p class="mt-4 mb-10 flex flex-col sm:flex-row gap-3">
             <Link
               size="lg"
               appearance="activity"
               href="#current"
               class="flex gap-2 items-center justify-center mt-8 text-xl">
               <Icon class="text-black w-8 h-8" name="bx:calendar" />
-              Aktuelle Aktivität
+              Aktuelle Aktivitäten
             </Link>
-          </p>
-
-          <p class="mt-4">
-            Wir freuen uns auf neugierige Köpfe und spannende Events!
           </p>
 
         </section>
