--- a/src/components/currentcourse.astro
+++ b/src/components/currentcourse.astro
@@ -23,7 +23,7 @@ import Activity1 from "@components/activities/1-programming-for-primary-kids.ast
   <div class="relative bg-emerald-300 px-10 pt-4 xl:rounded-3xl">
     <div class="mt-0 md:mt-8 mb-8">
       <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
-        Aktuelle Aktivität
+        Aktuelle Aktivitäten
       </h2>
     </div>
 
