--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -1,40 +1,23 @@
 ---
 import Container from "@components/container.astro";
-import Link from "@components/ui/link.astro";
-import Dropdown from "./dropdown.astro";
 import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 import { Picture } from "astro:assets";
-import logoImage from "assets/wonder-dots-logo.svg";
+import logoImage from "assets/wonder-dots-tree.svg";
 
 const menuitems = [
-  // {
-  //   title: "Features",
-  //   path: "#",
-  //   children: [
-  //     { title: "Action", path: "/" },
-  //     { title: "Another action", path: "#" },
-  //     { title: "Dropdown Submenu", path: "#" },
-  //     { title: "404 Page", path: "/404" },
-  //   ],
-  // },
-  // {
-  //   title: "Pricing",
-  //   path: "/pricing",
-  //   badge: false,
-  // },
   {
     title: "Über uns",
     path: "/about",
-    badge: false,
+    badge: false
   },
   {
     title: "Blog",
-    path: "/blog",
+    path: "/blog"
   },
   {
     title: "Kontakt",
-    path: "/contact",
-  },
+    path: "/contact"
+  }
 ];
 ---
 
@@ -42,9 +25,20 @@ const menuitems = [
   <header class="flex flex-col lg:flex-row justify-between items-center my-4 py-4 px-5">
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
-        <a href="/" class="text-3xl font-bold text-slate-800">
-          Wonder <span class="text-slate-500">Dots</span>
-        </a>
+        <div class="hidden lg:block">
+          <Picture
+            src={logoImage}
+            alt="Wonder Dots Tree"
+            loading="eager"
+            formats={["svg"]}
+            class="mx-auto"
+            height={100}
+          />
+        </div>
+        <div>
+          <a href="/" class="text-3xl font-bold text-slate-800">Wonder Dots</a><br />
+          <span class="text-md text-gray-500">MINT-Aktivitäten für Kids</span>
+        </div>
         <div class="block lg:hidden">
           <MenuIcon class="mt-2 w-8 h-8 text-black" />
         </div>
@@ -55,16 +49,16 @@ const menuitems = [
             menuitems.map((item, index) => (
               <!--
               <>
-                {item.children && (
-                  <Dropdown
-                    title={item.title}
-                    children={item.children}
-                    lastItem={index === menuitems.length - 1}
-                  />
-                )}
-             </>
-             -->
-             <>
+              {item.children && (
+              <Dropdown
+              title={item.title}
+              children={item.children}
+              lastItem={index === menuitems.length - 1}
+              />
+              )}
+              </>
+              -->
+              <>
                 {!item.children && (
                   <li>
                     <a
@@ -81,7 +75,7 @@ const menuitems = [
                     </a>
                   </li>
                 )}
-             </>
+              </>
             ))
           }
         </ul>
