--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,34 +9,64 @@ import Sectionhead from "@components/sectionhead.astro";
 const publishedTeamMembers = await getCollection("team", ({ data }) => {
   return !data.draft && data.publishDate < new Date();
 });
+publishedTeamMembers.sort(function (a, b) {
+  return a.data.publishDate.valueOf() - b.data.publishDate.valueOf();
+})
 ---
 
 <Layout title="About">
   <Container>
     <Sectionhead>
       <Fragment slot="title">Über uns</Fragment>
-      <Fragment slot="desc">Wir sind ein kleines, engagiertes Team</Fragment>
+      <Fragment slot="desc"></Fragment>
     </Sectionhead>
+
+    <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-16">
+      <h2 class="font-bold text-3xl text-gray-800">
+        Eltern für MINT
+      </h2>
+      <p>
+        Wir sind Diana und Rocco Georgi – Eltern von zwei Kindern im Primar- und Kanti-Alter und leidenschaftliche MINT-Fans.
+      </p>
+      <p>
+        <strong>
+          Mit Wonder Dots möchten wir Kindern früh den Zugang zu Informatik, Technik und Naturwissenschaften eröffnen. Spielerisch, kreativ und praxisnah.
+        </strong>
+      </p>
+      <p>
+        Diana ist Diplom-Betriebswirtin, arbeitet im Online-Marketing und bei der Gemeinde Meggen in der Schulbibliothek. Seit rund acht Jahren beschäftigt sie sich intensiv mit Montessori-Didaktik und MINT-Tools für Primarschüler. Sie kennt den Schulalltag und bringt Organisationstalent, Kreativität und pädagogische Erfahrung in unsere Kurse ein.
+      </p>
+      <p>
+        Rocco ist Principal Software Developer bei PAX im Team der Professur Informatische Bildung am Institut an der FHNW.
+        Dort entwickelt er Bildungssoftware wie <a href="http://ruler.game">ruler.game</a>,
+        die Lehrpersonen und Kinder im Computational Thinking unterstützt.
+
+        Er verfügt über mehr als 20 Jahre Erfahrung in Softwareentwicklung, internationalen Projekten und als Referent auf Fachkonferenzen – und ist zudem als Bike-Guide beim Kidsride-Mountainbiking von Mapaki Meggen aktiv.
+      </p>
+
+    </div>
 
     <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-16">
       <h2 class="font-bold text-3xl text-gray-800">
         Empowering Kids
       </h2>
-      <p class="text-lg leading-relaxed text-slate-500">
-        Als Eltern von Kindern um Primar- und Sekundarschulalter sehen wir, wie wichtig es ist, Kinder frühzeitig für diese Themen zu begeistern.
-        Unsere beruflichen Hintergründe liegen in der Software-Entwicklung, Betriebswirtschaftslehre als auch in der Informatischen Bildung von Ausbildung von Lerhrpersonen für die Primarstufe.
+      <p>
+        Unsere Motivation: Seit über zehn Jahren leben wir unsere Begeisterung für MINT-Themen.
+        Wir sehen den wachsenden Bedarf an informatischer Bildung ab der Primarstufe und teilweise den Abbau der bereits wenigen Angebote.
       </p>
-      <p class="text-lg leading-relaxed text-slate-500">
+      <p>
         Wir möchten mit Wonder Dots Kinder spielerisch und kreativ an MINT Themen heranzuführen, um sie für eine technisierte Zukunft zu rüsten, Verständnis für Technik zu schaffen und sie zu befähigen, diese aktiv mitzugestalten.
       </p>
     </div>
-    <!--div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-12">
+
+
+    <div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-12">
       {
         publishedTeamMembers.map((teamMemberEntry) => (
           <div class="group">
             <div class="w-full aspect-square">
               <Picture
-                src={teamMemberEntry.data.avatar.src}
+                src={teamMemberEntry.data.avatar.picture}
                 alt={teamMemberEntry.data.avatar.alt}
                 sizes="(max-width: 800px) 100vw, 400px"
                 width={400}
@@ -54,6 +84,8 @@ const publishedTeamMembers = await getCollection("team", ({ data }) => {
           </div>
         ))
       }
-    </div-->
+    </div>
+
+
   </Container>
 </Layout>
