--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -3,7 +3,7 @@
     © {new Date().getFullYear()} Wonder Dots ist ein Projekt der <a href="https://www.pavingways.com/">PavingWays GmbH</a>
   </p>
   <p class="text-center text-xs text-slate-500 mt-1">
-    <a href="https://www.pavingways.com/impressum/" class="hover:underline mr-4">Impressum</a>
-    <a href="https://www.pavingways.com/datenschutz/" class="hover:underline ml-4">Datenschutz</a>
+    <a href="https://www.pavingways.com/en/imprint/" class="hover:underline mr-4">Impressum</a>
+    <a href="https://www.pavingways.com/en/privacy/" class="hover:underline ml-4">Datenschutz</a>
   </p>
 </footer>
