--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -36,7 +36,7 @@ import { Icon } from "astro-icon/components";
             Dabei sind wir <strong>nicht nur am Bildschirm</strong> aktiv, sondern wir verbinden <strong>kreative Arbeit</strong> z.B. mit Stift und Papier mit informatischen Inhalten.
           </p>
           <p class="mt-4">
-            <a href="/about">Mehr zu unserem Konzept</a>
+            <a href="/kurse">Erfahre mehr zu unseren Kursen</a>
           </p>
           <p class="mt-4 font-bold">
             Hast du Lust, mit uns die digitale Welt zu erkunden?
