--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -1,22 +1,41 @@
 ---
 import Container from "@components/container.astro";
-import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
+import Dropdown from "./dropdown.astro";
+import { Astronav, MenuItems } from "astro-navbar";
 import { Picture } from "astro:assets";
 import logoImage from "assets/wonder-dots-tree.svg";
 
 const menuitems = [
   {
+    title: "Unsere Kurse",
+    badge: false,
+    children: [
+      {
+        title: "Allgemeine Infos",
+        path: "/kurse"
+      },
+      {
+        title: "VideoGame einzel",
+        path: "/mint-activities/1-programming-for-primary-kids"
+      },
+      {
+        title: "VideoGame 3-Tage",
+        path: "/mint-activities/2-programming-for-primary-kids-2"
+      }
+    ]
+  },
+  {
     title: "Über uns",
-    path: "/about",
+    path: "/ueberuns",
     badge: false
   },
-  {
-    title: "Blog",
-    path: "/blog"
-  },
+  // {
+  //   title: "Blog",
+  //   path: "/blog"
+  // },
   {
     title: "Kontakt",
-    path: "/contact"
+    path: "/kontakt"
   }
 ];
 ---
@@ -24,40 +43,37 @@ const menuitems = [
 <Container>
   <header class="flex flex-col lg:flex-row justify-between items-center my-4 py-4 px-5">
     <Astronav>
-      <div class="flex w-full lg:w-auto items-center justify-between">
-        <div class="hidden lg:block">
-          <Picture
-            src={logoImage}
-            alt="Wonder Dots Tree"
-            loading="eager"
-            formats={["svg"]}
-            class="mx-auto"
-            height={100}
-          />
+      <a href="/">
+        <div class="flex w-full lg:w-auto items-center justify-between">
+          <div class="hidden lg:block">
+            <Picture
+              src={logoImage}
+              alt="Wonder Dots Tree"
+              loading="eager"
+              formats={["svg"]}
+              class="mx-auto"
+              height={100}
+            />
+          </div>
+          <div>
+            <span class="text-3xl font-bold text-slate-800">Wonder Dots</span><br />
+            <span class="text-md text-gray-500">MINT-Aktivitäten für Kids</span>
+          </div>
         </div>
-        <div>
-          <a href="/" class="text-3xl font-bold text-slate-800">Wonder Dots</a><br />
-          <span class="text-md text-gray-500">MINT-Aktivitäten für Kids</span>
-        </div>
-        <div class="block lg:hidden">
-          <MenuIcon class="mt-2 w-8 h-8 text-black" />
-        </div>
-      </div>
+      </a>
       <MenuItems class="hidden w-full lg:w-auto mt-2 lg:flex lg:mt-0">
         <ul class="flex flex-col lg:flex-row lg:gap-3">
           {
             menuitems.map((item, index) => (
-              <!--
               <>
-              {item.children && (
-              <Dropdown
-              title={item.title}
-              children={item.children}
-              lastItem={index === menuitems.length - 1}
-              />
-              )}
+                {item.children && (
+                  <Dropdown
+                    title={item.title}
+                    children={item.children}
+                    lastItem={index === menuitems.length - 1}
+                  />
+                )}
               </>
-              -->
               <>
                 {!item.children && (
                   <li>
