--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -10,16 +10,16 @@ import { Icon } from "astro-icon/components";
   <Container>
     <Sectionhead>
       <Fragment slot="title">Kontakt</Fragment>
-      <Fragment slot="desc">here to help</Fragment>
+      <Fragment slot="desc"></Fragment>
     </Sectionhead>
 
     <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-16">
       <h2 class="font-bold text-3xl text-gray-800">
-        Fragen? Ideen? Feedback?
+        Fragen oder Feedback?
       </h2>
-      <p class="text-lg leading-relaxed text-slate-500">
-        Wir freuen uns über deine Nachricht – egal ob du etwas wissen möchtest, Feedback
-        hast oder einfach mehr über unsere Angebote erfahren willst.
+      <p class="text-lg leading-relaxed">
+        Wir freuen uns über deine Nachricht! Egal ob du etwas wissen möchtest,
+        Feedback hast oder einfach mehr über unsere Angebote erfahren willst.
       </p>
 
       <h2 class="font-bold text-3xl text-gray-800 mt-8">
@@ -27,9 +27,14 @@ import { Icon } from "astro-icon/components";
       </h2>
 
       <div class="mt-5">
-        <div class="flex items-center mt-2 space-x-2 text-gray-600">
-          <Icon class="text-gray-400 w-4 h-4" name="uil:map-marker" />
-          <span>Rocco Georgi, PavingWays GmbH, Badstrasse 13A, 6045 Meggen</span>
+        <div class="flex items-start mt-2 space-x-2 text-gray-600">
+          <Icon class="text-gray-400 w-4 h-4 mt-1" name="uil:map-marker" />
+          <span>
+            PavingWays GmbH<br>
+            Wonder Dots<br>
+            Badstrasse 13A<br>
+            6045 Meggen
+          </span>
         </div>
         <div class="flex items-center mt-2 space-x-2 text-gray-600">
           <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" />
@@ -37,7 +42,7 @@ import { Icon } from "astro-icon/components";
         </div>
         <div class="flex items-center mt-2 space-x-2 text-gray-600">
           <Icon class="text-gray-400 w-4 h-4" name="uil:phone" />
-          <a href="tel:+41768315837">tel: +41 76 831 58 37</a>
+          <a href="tel:+41768315837">+41 76 831 58 37</a>
         </div>
       </div>
     </div>
