--- a/src/pages/ueberuns.astro
+++ b/src/pages/ueberuns.astro
@@ -62,7 +62,7 @@ publishedTeamMembers.sort(function(a, b) {
                 sizes="(max-width: 800px) 100vw, 400px"
                 width={400}
                 height={400}
-                class="w-full rounded-md rounded transition group-hover:-translate-y-1 group-hover:shadow-xl bg-white object-cover object-center aspect-square"
+                class="w-full rounded-md transition group-hover:-translate-y-1 group-hover:shadow-xl bg-white object-cover object-center aspect-square"
               />
             </div>
 
