update about kurse

--- a/src/components/aboutcourses.astro
+++ b/src/components/aboutcourses.astro
@@ -60,8 +60,11 @@ const eventimages = [
   </p>
   <p>
     Kinder werden <strong>kreativ</strong> und zeichnen ihre eigenen Spielfiguren auf Papier.
-    Sie lernen wichtige <strong>Konzepte</strong> mit den Themen, die sie interessieren: <strong>Computerspiele</strong> begeistern - vor allem, die eigenen.
-    Einige Beispiele von Zeichnungen aus unseren Workshops:
+    Sie lernen wichtige <strong>Konzepte</strong> mit den Themen, die sie interessieren: <strong>Computerspiele</strong> begeistern - vor allem, wenn sie <strong>selbst gestaltet und programmiert</strong> werden.
+  </p>
+
+  <p>
+    Einige Beispiele von Zeichnungen aus unseren Veranstaltungen.
   </p>
 
   <CarouselImages images={drawings} zoomable={false} />
@@ -70,7 +73,7 @@ const eventimages = [
     Erprobt & bewährt
   </h2>
   <p>
-    Unsere Inhalte wurden <strong>im Unterricht an Primarschulen</strong> und <strong>auf Messen</strong> wie der
+    Unsere Inhalte wurden <strong>im Unterricht an Primarschulen</strong>, <strong>auf Messen</strong> wie der
     <a href="https://tunbasel.ch/" rel="nofollow noopener">tunBasel</a>
     und der <a href="https://tunsolothurn.ch/" rel="nofollow noopener">tunSolothurn</a>
     sowie <strong>bei Events</strong> im <a href="https://www.verkehrshaus.ch/" rel="nofollow noopener">Verkehrshaus der Schweiz</a>
@@ -84,11 +87,13 @@ const eventimages = [
   </h2>
   <p>
     Wir arbeiten eng mit der Fachhochschule Nordwestschweiz (FHNW) zusammen und
-    sind aktiv an der Weiterentwicklung von RULER.game beteiligt – einer innovativen
-    Schweizer Lernumgebung, die Tablets, Smartphones und Laptops in Tools für
+    sind aktiv an der Weiterentwicklung von <a href="https://www.ruler.game/" rel="nofollow noopener">RULER.game</a> beteiligt –
+    einer innovativen Schweizer Lernumgebung, die Tablets, Smartphones und Laptops in Tools für
     kollaboratives informatisches Denken verwandelt.
-    RULER.game ist zentraler Bestandteil unserer Kurse und wird laufend um neue
-    Funktionen erweitert.
+  </p>
+  <p>
+    RULER.game ist ein aktives <a href="https://about.ruler.game/" rel="nofollow noopener">Forschungsprojekt</a>.
+    Es ist zentraler Bestandteil unserer Kurse und wird laufend um neue Funktionen erweitert.
   </p>
 
   <h2 class="font-bold text-3xl text-gray-800">
@@ -103,8 +108,8 @@ const eventimages = [
     Wir vermitteln dabei:
   </p>
   <ul class="list-disc list-inside">
-    <li>ein grundlegendes Verständnis für digitale Systeme,</li>
-    <li>wie Computer „denken“ und Entscheidungen treffen,</li>
+    <li>grundlegendes Verständnis für digitale Systeme,</li>
+    <li>wie Computer "denken" und Entscheidungen treffen,</li>
     <li>kreative Problemlösestrategien mit nachhaltigem Nutzen für Schule und Alltag.</li>
   </ul>
 
@@ -112,10 +117,14 @@ const eventimages = [
     Ergänzung zum Schulunterricht
   </h2>
   <p>
-    Unsere Angebote erweitern und vertiefen, was im regulären Primarschul-Unterricht
-    behandelt wird.
+    Unsere Angebote erweitern und vertiefen, was im regulären Primarschul-Unterricht behandelt wird.
     <strong>Lehrpersonen</strong> binden wir gerne aktiv in unsere Workshops ein, um gemeinsam neue
-    Wege in der informatischen Bildung zu beschreiten. Unsere Aktivitäten sind bestens dafür geeignet, direkt in der Schule durchgeführt zu werden.
+    Wege in der informatischen Bildung zu beschreiten.
+  </p>
+
+  <p>
+    Unsere Aktivitäten sind bestens dafür geeignet, von Lehrpersonen direkt in der Primarschule durchgeführt zu werden.
+    Gern <a href="/kontakt" rel="nofollow noopener">informieren wir Interessierte</a> im Detail.
   </p>
 
 </>
