updated course information, menu and internal links, also layout fixes

--- a/src/components/aboutcourses.astro
+++ b/src/components/aboutcourses.astro
@@ -73,11 +73,11 @@ const eventimages = [
     Erprobt & bewährt
   </h2>
   <p>
-    Unsere Inhalte wurden <strong>im Unterricht an Primarschulen</strong>, <strong>auf Messen</strong> wie der
+    Die Inhalte unserer Kurse wurden <strong>im Unterricht an Primarschulen</strong>, <strong>auf Messen</strong> wie der
     <a href="https://tunbasel.ch/" rel="nofollow noopener">tunBasel</a>
     und der <a href="https://tunsolothurn.ch/" rel="nofollow noopener">tunSolothurn</a>
     sowie <strong>bei Events</strong> im <a href="https://www.verkehrshaus.ch/" rel="nofollow noopener">Verkehrshaus der Schweiz</a>
-    in Luzern mit <strong>Hunderten von Kinden</strong> im Alter von 6 bis 14 Jahren erfolgreich getestet.
+    in Luzern mit <strong>Hunderten von Kinden</strong> im Alter von 6 bis 14 Jahren erfolgreich eingesetzt.
   </p>
 
   <CarouselImages images={eventimages} zoomable={true} />
@@ -112,6 +112,10 @@ const eventimages = [
     <li>wie Computer "denken" und Entscheidungen treffen,</li>
     <li>kreative Problemlösestrategien mit nachhaltigem Nutzen für Schule und Alltag.</li>
   </ul>
+
+  <p>
+    Interessierte Eltern dürfen ihre Kinder gern begleiten und mitmachen.
+  </p>
 
   <h2 class="font-bold text-3xl text-gray-800">
     Ergänzung zum Schulunterricht
