--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -3,7 +3,7 @@ interface Props {
   href: string;
   size?: "md" | "lg";
   block?: boolean;
-  appearance?: "outline" | "activity" | "primary" | "inverted" | "muted";
+  appearance?: "outline" | "activity" | "primary" | "inverted" | "muted" | "unstyled";
   class?: string;
 
   [x: string]: any;
