--- a/src/pages/ueberuns.astro
+++ b/src/pages/ueberuns.astro
@@ -46,8 +46,11 @@ publishedTeamMembers.sort(function(a, b) {
       </p>
       <p>
         Wir möchten mit Wonder Dots Kinder spielerisch und kreativ an MINT-Themen heranführen,
-        um sie für eine technisier Zukunft zu rüsten und um Verständnis für Technik zu schaffen.
-        Wir wollen  Kinder befähigen, diese komplexe Zukunft aktiv mitzugestalten.
+        um sie für eine technisierte Zukunft zu rüsten und um Verständnis für Technik und Informatik zu schaffen.
+
+      </p>
+      <p>
+        <strong>Wir wollen Kinder befähigen, diese komplexe Zukunft aktiv mitzugestalten.</strong>
       </p>
     </div>
 
@@ -76,15 +79,17 @@ publishedTeamMembers.sort(function(a, b) {
 
     <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-8">
       <p>
-        Diana ist Diplom-Betriebswirtin, arbeitet im Online-Marketing und bei der Gemeinde Meggen in der Schulbibliothek. Seit rund acht Jahren beschäftigt sie sich intensiv mit Montessori-Didaktik und MINT-Tools für Primarschüler. Sie kennt den
-        Schulalltag und bringt Organisationstalent, Kreativität und pädagogische Erfahrung in unsere Kurse ein.
+        Diana ist Diplom-Betriebswirtin, arbeitet im Online-Marketing und in der <a href="https://www.schule-meggen.ch/topics/weitere-angebote/bibliothek" rel="nofollow noopener">Schulbibliothek der Gemeinde Meggen</a>.
+        Seit 2015 beschäftigt sie sich intensiv mit Montessori-Didaktik und MINT-Tools für Primarschüler.
+        Sie kennt den Schulalltag und bringt Organisationstalent, Kreativität und pädagogische Erfahrung in unsere Kurse ein.
       </p>
       <p>
-        Rocco ist Software Engineer (M.A.), entwickelt Software bei <a href="https://pax.ch">PAX</a> und ist im Team der Professur Informatische Bildung am Institut Primarstufe an der FHNW.
-        Dort entwickelt er die Bildungssoftware <a href="http://ruler.game">ruler.game</a> mit, die Lehrpersonen und Kinder im Computational Thinking unterstützt.
+        Rocco ist Software Engineer (M.A.) und entwickelt Software bei <a href="https://pax.ch" rel="nofollow noopener">PAX</a>.
+        Er ist im Team der <a href="https://www.fhnw.ch/de/die-fhnw/hochschulen/ph/institute/institut-primarstufe/professuren-am-ip/professur-informatische-bildung" rel="nofollow noopener">Professur Informatische Bildung am Institut Primarstufe an der FHNW</a> und entwickelt dort
+        die Bildungssoftware <a href="https://ruler.game" rel="nofollow noopener">RULER.game</a> mit, die Lehrpersonen und Kinder im Computational Thinking unterstützt.
 
-        Er verfügt über mehr als 20 Jahre Erfahrung in Softwareentwicklung in internationalen Projekten und als Referent auf Fachkonferenzen.
-        Er ist zudem jede Woche als Bike-Guide beim Kidsride-Mountainbiking von Mapaki Meggen aktiv.
+        Er verfügt über mehr als 20 Jahre Erfahrung in der Softwareentwicklung in internationalen Projekten, als Referent auf Fachkonferenzen und hat Erfahrung als Ausbilder und Lehrer.
+        Er ist zudem Mountainbike-Guide beim <a href="https://bikemaniatours.ch/touren_kurse/kidsride/" rel="nofollow noopener">bikemania KidsRide</a> von <a href="https://www.mapaki.ch/" rel="nofollow noopener">MAPAKi Meggen</a> aktiv.
       </p>
     </div>
 
