--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -4,18 +4,18 @@ import heroImage from "assets/wonder-dots-logo.svg";
 import Link from "@components/ui/link.astro";
 import { Icon } from "astro-icon/components";
 ---
-<main class="mt-44 max-w-screen-xl mx-auto">
+<main class="mt-44 max-w-screen-lg mx-auto">
   <!-- bubbles -->
   <div class="relative -z-10">
     <div class="absolute w-64 h-64 bg-white rounded-full -top-20 -left-8" />
     <div class="absolute w-52 h-52 bg-white rounded-full -top-12 left-40" />
-    <div class="absolute w-40 h-40 bg-white rounded-full -top-24 right-80" />
+    <div class="absolute w-40 h-40 bg-white rounded-full -top-14 right-80" />
     <div class="absolute w-96 h-96 bg-white rounded-full -top-24 right-96" />
   </div>
 
   <!-- content -->
-  <div class="bg-white px-10 pt-8 pb-40 xl:rounded-tr-3xl">
-    <h1 class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter mb-8">
+  <div class="bg-white px-10 pt-8 pb-40 lg:rounded-tr-3xl">
+    <h1 class="text-4xl sm:text-5xl lg:text-7xl font-bold lg:tracking-tight mb-8">
       MINT-Aktivitäten für Kids
     </h1>
 
@@ -36,7 +36,7 @@ import { Icon } from "astro-icon/components";
             Dabei sind wir <strong>nicht nur am Bildschirm</strong> aktiv, sondern wir verbinden <strong>kreative Arbeit</strong> z.B. mit Stift und Papier mit informatischen Inhalten.
           </p>
           <p class="mt-4">
-            <a href="/kurse">Erfahre mehr zu unseren Kursen</a>
+            <a href="/kurse">Erfahre mehr zu unserem Konzept und unseren Kursen</a>
           </p>
           <p class="mt-4 font-bold">
             Hast du Lust, mit uns die digitale Welt zu erkunden?
@@ -49,7 +49,7 @@ import { Icon } from "astro-icon/components";
               href="#current"
               class="flex gap-2 items-center justify-center mt-8 text-xl">
               <Icon class="text-black w-8 h-8" name="bx:calendar" />
-              Aktuelle Aktivitäten
+              Unsere Aktuellen Aktivitäten
             </Link>
           </p>
 
