--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -18,8 +18,8 @@ import { Icon } from "astro-icon/components";
         Fragen oder Feedback?
       </h2>
       <p>
-        Wir freuen uns über deine Nachricht! Egal ob du etwas wissen möchtest,
-        Feedback hast oder einfach mehr über unsere Angebote erfahren willst.
+        Wir freuen uns über deine Nachricht!<br>
+        Egal ob du etwas wissen möchtest, Feedback hast oder einfach mehr über <a href="/kurse" rel="nofollow noopener">unsere Kurse</a> erfahren willst.
       </p>
 
       <h2 class="font-bold text-3xl text-gray-800 mt-8">
