--- a/src/components/activities/2-videogames-programmieren-fuer-fortgeschrittene-primarschueler.astro
+++ b/src/components/activities/2-videogames-programmieren-fuer-fortgeschrittene-primarschueler.astro
@@ -7,7 +7,7 @@ import { Picture } from "astro:assets";
 <div class="border-2 border-dashed border-black bg-white rounded-xl px-6 pt-2 pb-4">
   <div class="mt-4 flex flex-row">
     <Icon class="text-black w-10 h-10 pb-2 inline-block mr-2" name="bx:user" />
-    <div class="mt-1 ml-1">
+    <div class="mt-1 ml-1 text-left">
       <span class="block xs:inline">Kinder im Alter ab ca. 11 Jahren</span>
     </div>
   </div>
@@ -15,25 +15,25 @@ import { Picture } from "astro:assets";
     <Icon class="text-black w-10 h-10 pb-2 mr-2" name="bx:calendar" />
     <div class="mt-1 ml-1 text-left">
       <span class="block xs:inline">29.10.2025,</span><br>
-      <span class="block xs:inline">04.11.2025</span><br>
+      <span class="block xs:inline">05.11.2025</span><br>
       <span class="block xs:inline">und 12.11.2025</span>
     </div>
   </div>
   <div class="mt-4 flex flex-row">
     <Icon class="text-black w-10 h-10 pb-2 mr-2" name="bx:time" />
-    <div class="mt-1 ml-1">
+    <div class="mt-1 ml-1 text-left">
       <span class="block xs:inline">jeweils 2 Stunden von 14:00 bis 16:00 Uhr</span>
     </div>
   </div>
   <div class="mt-4 flex flex-row">
     <Icon class="text-black w-10 h-10 pb-2 inline-block mr-2" name="bx:building-house" />
-    <div class="mt-1 ml-1">
+    <div class="mt-1 ml-1 text-left">
       <span class="block xs:inline">Gemeindesaal Meggen, Am Dorfplatz 3</span>
     </div>
   </div>
   <div class="mt-4 flex flex-row">
     <Icon class="text-black w-10 h-10 pb-2 inline-block mr-2" name="bx:credit-card" />
-    <div class="mt-1 ml-1">
+    <div class="mt-1 ml-1 text-left">
       <span class="block xs:inline">Kursgebühr CHF 150.00</span>
     </div>
   </div>
