--- a/src/components/activities/2-videogames-programmieren-fuer-fortgeschrittene-primarschueler.astro
+++ b/src/components/activities/2-videogames-programmieren-fuer-fortgeschrittene-primarschueler.astro
@@ -14,9 +14,10 @@ import { Picture } from "astro:assets";
   <div class="mt-4 flex flex-row items-start">
     <Icon class="text-black w-10 h-10 pb-2 mr-2" name="bx:calendar" />
     <div class="mt-1 ml-1 text-left">
+      <span class="block xs:inline">3 mal am Mittwoch:</span><br>
       <span class="block xs:inline">29.10.2025,</span><br>
-      <span class="block xs:inline">05.11.2025</span><br>
-      <span class="block xs:inline">und 12.11.2025</span>
+      <span class="block xs:inline">05.11.2025,</span><br>
+      <span class="block xs:inline">12.11.2025</span>
     </div>
   </div>
   <div class="mt-4 flex flex-row">
@@ -28,7 +29,8 @@ import { Picture } from "astro:assets";
   <div class="mt-4 flex flex-row">
     <Icon class="text-black w-10 h-10 pb-2 inline-block mr-2" name="bx:building-house" />
     <div class="mt-1 ml-1 text-left">
-      <span class="block xs:inline">Gemeindesaal Meggen, Am Dorfplatz 3</span>
+      <span class="block xs:inline">Gemeindesaal Meggen</span><br>
+      <span class="block xs:inline">Am Dorfplatz 3</span>
     </div>
   </div>
   <div class="mt-4 flex flex-row">
