--- a/src/pages/mint-activities/1-programierung-videogame-primarschueler.astro
+++ b/src/pages/mint-activities/1-programierung-videogame-primarschueler.astro
@@ -1,10 +1,11 @@
 ---
+import { Icon } from "astro-icon/components";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import Activity1 from "@components/activities/1-programierung-videogame-primarschueler.astro";
-import { Icon } from "astro-icon/components";
-import Link from "../../components/ui/link.astro";
+import ConceptQuote from "@components/conceptquote.astro";
+import Link from "@components/ui/link.astro";
 ---
 
 <Layout title="MINT Workshop 1 - Informatik für Primarschüler: Baue dein eigenes Videogame, Computational Thinking">
@@ -25,13 +26,11 @@ import Link from "../../components/ui/link.astro";
       </p>
       <p>
         Die Kinder werden kreativ und lernen dabei die Grundlagen der Informatik auf spielerische und kreative Art kennen!
-        Sie zeichnen eigene Spielfiguren und entwickeln ihr erstes Videogame – <strong>ganz ohne Vorkenntnisse</strong>.
+        Sie zeichnen eigene Spielfiguren und entwickeln damit ihr erstes Videogame – <strong>ganz ohne Vorkenntnisse</strong>.
       </p>
-      <blockquote class="text-black border-l-4 border-black pl-4">
-        Wir vermitteln die Konzepte des <a href="https://en.wikipedia.org/wiki/Computational_thinking" rel="nofollow noopener"><strong>Computational Thinking</strong></a>
-        und benutzen dabei die an der <a href="https://www.fhnw.ch/de/die-fhnw/hochschulen/ph/institute/institut-primarstufe/professuren-am-ip/professur-informatische-bildung/arbeitsgebiet" rel="nofollow noopener">FHNW</a>
-        entwickelte Lernsoftware <a href="https://ruler.game" rel="nofollow noopener">RULER.game</a>, die - wissenschaftlich fundiert - neue Wege in der Informatischen Bildung ermöglicht.
-      </blockquote>
+
+      <ConceptQuote />
+
       <p>
         In diesem Workshop gestalten Kinder ihre eigenen Spielfiguren – ganz klassisch und kreativ mit Stift und Papier.
         Diese werden anschliessend digitalisiert und in ein eigenes kleines Spiel eingebaut.
