--- a/src/pages/mint-activities/2-videogames-programmieren-fuer-fortgeschrittene-primarschueler.astro
+++ b/src/pages/mint-activities/2-videogames-programmieren-fuer-fortgeschrittene-primarschueler.astro
@@ -1,10 +1,11 @@
 ---
+import { Icon } from "astro-icon/components";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
+import Link from "@components/ui/link.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import Activity2 from "@components/activities/2-videogames-programmieren-fuer-fortgeschrittene-primarschueler.astro";
-import { Icon } from "astro-icon/components";
-import Link from "../../components/ui/link.astro";
+import ConceptQuote from "@components/conceptquote.astro";
 ---
 
 <Layout title="MINT Workshop 2 - Informatik für Primarschüler: Baue eigene Videogames, Computational Thinking">
@@ -34,11 +35,9 @@ import Link from "../../components/ui/link.astro";
         Die Kinder werden auch hier kreativ und sie lernen auf spielerische Art die Grundlagen der Informatik kennen!
         Angefangen mit dem Zeichnen eigener Spielfiguren entwickeln sie ihr erstes Videogame – auch hier geht das <strong>ganz ohne Vorkenntnisse</strong>.
       </p>
-      <blockquote class="text-black border-l-4 border-black pl-4">
-        Wir vermitteln die Konzepte des <a href="https://en.wikipedia.org/wiki/Computational_thinking" rel="nofollow noopener"><strong>Computational Thinking</strong></a>
-        und benutzen dabei die an der <a href="https://www.fhnw.ch/de/die-fhnw/hochschulen/ph/institute/institut-primarstufe/professuren-am-ip/professur-informatische-bildung/arbeitsgebiet" rel="nofollow noopener">FHNW</a>
-        entwickelte Lernsoftware <a href="https://ruler.game" rel="nofollow noopener">RULER.game</a>, die - wissenschaftlich fundiert - neue Wege in der Informatischen Bildung ermöglicht.
-      </blockquote>
+
+      <ConceptQuote />
+
       <p>
         Wir lernen in diesem Kurs ebenfalls nicht Programmieren, sondern wir wollen verstehen, wie Abstraktion, Logik, Regeln und Abläufe in Computern funktionieren - also das, was hinter guter Software steckt, unabhängig von einer
         Programmiersprache.
